--- a/index.html
+++ b/index.html
@@ -2,52 +2,45 @@
 <html>
 
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
   <base href="/myportfolio_web/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
 
-  <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="my_portfolio">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <!-- Favicon -->
   <link rel="icon" type="image/png" href="appicon.png" />
 
   <title>Naga Ajay Bathula</title>
   <link rel="manifest" href="manifest.json">
 
-  <script>
-    // The value below is injected by flutter build, do not touch.
-    var flutter_service_worker_version = null;
-  </script>
-  <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
 
 <body>
   <script>
     window.addEventListener('load', function (ev) {
-      // Download main.dart.js
+      // 1. Set the build configuration
+      window._flutter = window._flutter || {};
+      window._flutter.buildConfig = {
+        "engineRevision": "6c0baaebf70e0148f485f27d5616b3d3382da7bf",
+        "builds": [
+          {
+            "compileTarget": "dart2js",
+            "renderer": "canvaskit",
+            "mainJsPath": "main.dart.js"
+          }
+        ]
+      };
+
+      // 2. Initialize the loader
       _flutter.loader.load({
-        serviceWorker: {
-          flutter_service_worker_version: flutter_service_worker_version,
+        serviceWorkerSettings: {
+          serviceWorkerVersion: "2008832521",
         },
         onEntrypointLoaded: function (engineInitializer) {
           engineInitializer.initializeEngine().then(function (appRunner) {
